<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BPMActivity">


    <ImageView
        android:id="@+id/imgv_pato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logoBQ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/logobq" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/slider"
        android:stepSize="1"
        android:value="80"
        android:valueFrom="60"
        android:valueTo="200"
        app:labelBehavior="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_bpm"
        app:thumbColor="@color/primariaAma"
        app:thumbRadius="15dp"
        app:tickRadiusActive="2dp"
        app:tickRadiusInactive="2dp"
        app:trackColor="@color/primariaAma"
        app:trackColorActive="@color/bico"
        app:trackHeight="6dp" />

    <ImageView
        android:id="@+id/select_bpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:contentDescription="@string/selectbpm"
        android:src="@drawable/selectbpm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.193" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.42"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/text_slider_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/slidermin"
        android:fontFamily="@font/satisfy_reg"
        android:text="@string/slidermin"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_slider_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/slidermax"
        android:fontFamily="@font/satisfy_reg"
        android:text="@string/slidermax"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/text_slider_min"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bpm_button"
        android:layout_width="179dp"
        android:layout_height="68dp"
        android:layout_margin="16dp"
        android:backgroundTint="#EDC023"
        android:elevation="5dp"
        android:text="Selecionar"
        android:textColor="#1B5E20"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_slider_max"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>