<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayingActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_topo_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:id="@+id/imgv_pato_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logoBQ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_topo_logo"
        app:srcCompat="@drawable/logobq" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_margin_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <pl.droidsonroids.gif.GifImageView
       android:id="@+id/iv_rocking_quack_gif"
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:contentDescription="@string/playing"
       app:layout_constraintBottom_toTopOf="@+id/gl_margin_bottom"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/guideline6"
       android:src="@drawable/rocking" />

<!--    <ImageView
        android:id="@+id/iv_rocking_quack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/playing"
        app:layout_constraintBottom_toTopOf="@+id/gl_margin_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:srcCompat="@drawable/rockingquack" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <ImageButton
        android:id="@+id/ibtn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/play"
        android:contentDescription="@string/playbutton"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_margin_bottom"
        app:srcCompat="@drawable/play" />

    <ImageButton
        android:id="@+id/ibtn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/stop"
        android:contentDescription="@string/stopbutton"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/gl_margin_bottom"
        app:srcCompat="@drawable/stop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/play_pause_bttn"
        android:textOn="PLAY"
        android:textOff="PAUSE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="577dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>